--- a/Fundamentos/Bloco_6/6.2/styles.css
+++ b/Fundamentos/Bloco_6/6.2/styles.css
@@ -15,3 +15,10 @@
     margin: auto;
     margin-top: 45px;
 }
+#button {
+    margin-top: 30px;
+    display: block;
+    margin-inline: auto;
+    margin-bottom: 60px;
+    background-color: teal;
+}
