--- a/Fundamentos/Bloco_6/6.3/style.css
+++ b/Fundamentos/Bloco_6/6.3/style.css
@@ -21,9 +21,7 @@
 .title {
   display: flex;
   justify-content: space-between;
-  padding-top: 5px;
-  padding-left: 15px;
-  padding-bottom: 15px;
+  padding: 15px 15px;
   align-items: baseline;
   margin-bottom: 50px;
   background-color: #2a9d8f
@@ -49,8 +47,7 @@
   border-radius: 15px;
   width: 200px;
   padding-left: 30px;
-  background-color: lightgrey;
-  
+  background-color: lightgrey;  
 }
 #line {
   width: 50%;
